Add remove nil type code action